examples/misc/error/compilation/syntax_letrec.bfr
let main =
  let rec r = let f _ = r in f 0 in
  []